--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,8 @@
         <nav>
             <h1>"Quem pode doar Sangue"</h1>
             <selection>
-                <h2>"A doação de sangue é um procedimento seguro e que pode ser feita por pessoas que possuem mais de 50 kg ou IMC superior a 18,5 kg/m2, não possuam alterações no hemograma e tenham 16 anos ou mais. Os homens podem doar a cada 3 meses enquanto que as mulheres devem esperar 4 meses entre cada doação devido à perda de sangue em função do período menstrual."</h2>
+                <h2>"A doação de sangue ...."</h2>
+                <h3>Centros de doaçoes</h3>
             </selection>
         </nav>
 <body>
