--- a/Projetointegrador.html
+++ b/Projetointegrador.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <img src="./blog.png"><img src="./TextoBlog.png">
+    <img src="./Titulo.png">
       <nav>
         <ul>
-        <li><a href="./Home.html"></a><a>"Home"</li>
+        <li><a href="./Home.html">Home</a></li>
           <li><a href="./Artigos_sbre_doação.html">Artigos sobre doações!</a></li>
           <li><a href="./Depoimentos.html">Depoimentos de doadores!</a></li>
           <li><a href="./PERGUNTAS_FREQUENTES.html">Perguntas Frequentes</a></li>
