--- a/Projetointegrador.html
+++ b/Projetointegrador.html
@@ -21,14 +21,14 @@
       </nav>
     </header>
     <main>
-      <h1>Blog Doador do AMOR</h1>
+      <h1>HemoBlog:Gotas de Vida</h1>
       <section>
         <h2>Sobre nós</h2>
         <p>"Esse blog esta destinado a todos aqueles que tem interesse em doar sangue , ou ate mesmo para esclarecer alguma duvida sobre o ato de doar!</p>
       </section>
     </main>
     <footer>
-      <span>Blog Doador do AMOR</span>
+      <span>HemoBlog:Gotas de Vida</span>
       <ul>
         <li>Facebook</li>
         <li>Instagram</li>
