--- a/PERGUNTAS_FREQUENTES.html
+++ b/PERGUNTAS_FREQUENTES.html
@@ -4,10 +4,10 @@
     <!-- utf8 é um conjunto de caractere que suporta acentuação -->
     <meta charset="UTF-8">
 <!-- Nome do site -->
-        <title>EmoBlog: Inspiração para Doar Sangue</title>
+        <title>EmoBlog: Gotas de Vida</title>
 <!-- Logo -->
     <nav>
-        <img src="dddd.png">
+        <img src="logo do site">
         </a>
 <!-- outros links -->
         <a href=>Inicio</a> |
