--- a/PERGUNTAS_FREQUENTES.html
+++ b/PERGUNTAS_FREQUENTES.html
@@ -3,13 +3,15 @@
 <head>
     <!-- utf8 é um conjunto de caractere que suporta acentuação -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Nome do site -->
         <title>EmoBlog: Gotas de Vida</title>
 <!-- Logo -->
     <nav>
-        <img src="logo do site">
+        <img src="logo">
         </a>
 <!-- outros links -->
+<!-- a = link -->
         <a href=>Inicio</a> |
         <a href=>Registro</a> |
         <a href=>Duvidas</a> |
@@ -21,14 +23,14 @@
     <div>
         <h1>Perguntas Frequentes</h1>
         <p></p>
-<!-- Perguntas -->
     <div>
+
     <!-- pergunta + resposta -->
-    <div class="Pergunta 1"> 
-        <h3>Quem pode doar?</h3>
-        <p>Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos.
-        Jovens de 16 ou 17 anos também estão aptos, desde que tenham o consentimento dos pais ou dos responsáveis.</p>
-    </div>
+    <details>
+        <summary>Quem pode doar?</summary>
+        Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos.
+  </details>
+
     <div class="Pergunta 2"> 
         <h3>Pergunta 2</h3>
         <p>resposta 2</p>
@@ -50,7 +52,13 @@
         <p>resposta 6</p>
     </div>
 <!-- tag br p/ quebra de linha -->
-   <br>
+    <br>
+    <h2>Envie sua Dúvida</h2>
+    <br>
+   <input>
+    <button>Enviar</button>
+    <br>
+    <br>
 <!-- Rodapé -->
     <div>
         <p>Quem Somos</p>
@@ -59,5 +67,4 @@
         <p>Missão</p>
     </div>
 </body>
-
 </html>
