2do commit home

--- a/index.html
+++ b/index.html
@@ -1,65 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome do Site</title>
+    <title>HemoBlog: Gotas de Vida</title>
 </head>
+
 <body>
 
-    <!-- Cabecalho -->
+    <!-- Cabeçalho -->
     <header>
-        <img src="" alt="Logo">
-        <ul>
-            <li><a href="./index.html"> Home</a></li>
-            <li><a href="./html/artigos.html">Artigos</a></li>
-            <li><a href="./html/duvidas.html">Dúvidas</a></li>
-            <li><a href="./html/registro.html"> Registro</a></li>
-        </ul>
+        <a href="./index.html"><img src="./imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
+        <nav>
+            <ul>
+                <li><a href="./index.html"> Home</a></li>
+                <li><a href="./html/artigos.html">Artigos</a></li>
+                <li><a href="./html/duvidas.html">Dúvidas</a></li>
+                <li><a href="./html/registro.html"> Registro</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Banner com imagens -->
-    <section>
-        <img src="" alt="Imagem sobre a Doacao de Sangue">
-    </section>
+    <main>
 
-    <!-- Artigos -->
-    <section>
-        <img src="" alt="Imagen Artigo 1">
-        <p>Titulo Artigo 1</p>
-        <img src="" alt="Imagen Artigo 2">
-        <p>Titulo Artigo 2</p>
-        <img src="" alt="Imagen Artigo 3">
-        <p>Titulo Artigo 3</p>
+        <!-- Banner com imagens -->
+        <section>
+            <img src="./imagens/banner1.png" alt="Imagem sobre a Doação de Sangue" width="60%">
+        </section>
 
-        <a href="./html/artigos.html">Ver todos</a> <!-- Botao-->
-    </section>
+        <!-- Artigos -->
+        <section>
+            <h1>Artigos sobre Doação de Sangue</h1>
+            <div>
+                <a href="./html/artigo_completo.html"><img src="./imagens/Por que doar sangue.jpg" alt="Pessoa doando sangue"  width="20%"></a>
+                <h2>Por que doar Sangue?</h2>
+            </div>
 
-    <!-- Convite a Registrar -->
-    <section>
-        <h2>Quer ser um doador de sangue</h2>
-        <p><a href="./html/registro.html">Formulário de Registro</a> </p><!-- Botao -->
-    </section>
+            <div>
+                <img src="./imagens/calendario.jpg" alt="Calendario de Doação de Sangue" width="20%">
+                <h2>Calendario de Doação de Sangue</h2>
+            </div>
 
-    <!-- Convidar um amigo -->
-    <section>
-        <p>Você nao pode doar sangue?</p>
-        <img src="" alt="QR code">
-        <p>Quer convidar um amigo?</p>
-    </section>
+            <div>
+                <img src="./imagens/Dicas para o dia da doação.jpg" alt="Dicas para o dia da doação" width="20%">
+                <h2>Dicas para o dia da doação</h2>
+            </div>
 
-    <article>
-        <h3>Depoimentos e agradecimentos</h3>
-        <p>Depoimento 1</p>
-        <p>Depoimento 2</p>
-        <p>Depoimento 3</p>
-        <img src="" alt="Seta virada para abaixo"> <!-- Botao -->
-    </article>
+            <button> <a href="./html/artigos.html">Ver todos</a> </button>
+
+        </section>
+
+        <!-- Convite a Registrar -->
+        <section>
+            <h2>Quer ser um doador de sangue</h2>
+            <button><a href="./html/registro.html">Formulário de Registro</a></button>
+        </section>
+
+        <!-- Convidar um amigo -->
+        <section>
+            <p>Você nao pode doar sangue?</p>
+            <img src="./imagens/frame.png" alt="QR code" width="10%">
+            <p>Quer convidar um amigo?</p>
+        </section>
+
+        <article>
+            <h3>Depoimentos e agradecimentos</h3>
+            <p>Depoimento 1</p>
+            <p>Depoimento 2</p>
+            <p>Depoimento 3</p>
+        </article>
+        
+    </main>
 
     <footer>
         <p>Todos os direitos reservados</p>
     </footer>
 
 </body>
+
 </html>
