--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav>
             <ul>
                 <li><a href="./index.html"> Home</a></li>
-                <li><a href="./html/artigos.html">Artigos</a></li>
-                <li><a href="./html/duvidas.html">Dúvidas</a></li>
-                <li><a href="./html/registro.html"> Registro</a></li>
+                <li><a href="./html/Artigos_sbre_doação.html">Artigos</a></li>
+                <li><a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                <li><a href="./html/Formularios_inscriçoes.html"> Registro</a></li>
             </ul>
         </nav>
     </header>
