--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<img src="./Artigos.png">
+<img src="../imagens/Artigos.png">
 <nav>
     <Ul>
         <li>Indice:</li>
