--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -8,7 +8,9 @@
         <title>EmoBlog: Gotas de Vida</title>
 <!-- Logo -->
     <nav>
-        <img src="logo">
+        <img src="../imagens/LOGO - GOTAS DE VIDA.png"alt="Logo" width="15%"></a>
+    </nav>
+               <img src="logo">
         </a>
 <!-- outros links -->
 <!-- a = link -->
