--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -68,5 +68,8 @@
         <p>Redes Sociais</p>
         <p>Missão</p>
     </div>
+         <footer>
+        <p>Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
