padronização de cabeçalhos e rodapés

--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <!-- utf8 é um conjunto de caractere que suporta acentuação -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Nome do site -->
-        <title>EmoBlog: Gotas de Vida</title>
-<!-- Logo -->
-    <nav>
-        <img src="../imagens/LOGO - GOTAS DE VIDA.png"alt="Logo" width="15%"></a>
-    </nav>
-               <img src="logo">
-        </a>
-<!-- outros links -->
-<!-- a = link -->
-        <a href=>Inicio</a> |
-        <a href=>Registro</a> |
-        <a href=>Duvidas</a> |
-        <a href=>Artigos</a>
-    </nav>
+    <!-- Nome do site -->
+    <title>HemoBlog: Gotas de Vida</title>
 </head>
-<!-- Titulo -->
+
 <body>
-    <div>
-        <h1>Perguntas Frequentes</h1>
-        <p></p>
-    <div>
+    <header>
+        <nav>
+            <a href="../index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
+            <a href="../index.html"> Home</a> |
+            <a href="./Artigos_sbre_doação.html">Artigos</a> |
+            <a href="./PERGUNTAS_FREQUENTES.html">Dúvidas</a>|
+            <a href="./Formularios_inscriçoes.html"> Registro</a> |
+        </nav>
+    </header>
 
-    <!-- pergunta + resposta -->
-    <details>
-        <summary>Quem pode doar?</summary>
-        Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos.
-  </details>
+    <main>
+        <div>
+            <h1>Perguntas Frequentes</h1>
+            <p></p>
+            <div>
 
-    <div class="Pergunta 2"> 
-        <h3>Pergunta 2</h3>
-        <p>resposta 2</p>
-    </div>
-    <div class="Pergunta 3"> 
-        <h3>Pergunta 3</h3>
-        <p>resposta 3</p>
-    </div>
-    <div class="Pergunta 4"> 
-        <h3>Pergunta 4</h3>
-        <p>resposta 4</p>
-    </div>
-    <div class="Pergunta 5"> 
-        <h3>Pergunta 5</h3>
-        <p>resposta 5</p>
-    </div>
-    <div class="Pergunta 6"> 
-        <h3>Pergunta 6</h3>
-        <p>resposta 6</p>
-    </div>
-<!-- tag br p/ quebra de linha -->
-    <br>
-    <h2>Envie sua Dúvida</h2>
-    <br>
-   <input>
-    <button>Enviar</button>
-    <br>
-    <br>
-<!-- Rodapé -->
-    <div>
-        <p>Quem Somos</p>
-        <p>Fale Conosco</p>
-        <p>Redes Sociais</p>
-        <p>Missão</p>
-    </div>
-         <footer>
+                <!-- pergunta + resposta -->
+                <details>
+                    <summary>Quem pode doar?</summary>
+                    Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos.
+                </details>
+
+                <div class="Pergunta 2">
+                    <h3>Pergunta 2</h3>
+                    <p>resposta 2</p>
+                </div>
+                <div class="Pergunta 3">
+                    <h3>Pergunta 3</h3>
+                    <p>resposta 3</p>
+                </div>
+                <div class="Pergunta 4">
+                    <h3>Pergunta 4</h3>
+                    <p>resposta 4</p>
+                </div>
+                <div class="Pergunta 5">
+                    <h3>Pergunta 5</h3>
+                    <p>resposta 5</p>
+                </div>
+                <div class="Pergunta 6">
+                    <h3>Pergunta 6</h3>
+                    <p>resposta 6</p>
+                </div>
+                <!-- tag br p/ quebra de linha -->
+                <br>
+                <h2>Envie sua Dúvida</h2>
+                <br>
+                <input>
+                <button>Enviar</button>
+                <br>
+                <br>
+    </main>
+    <hr>
+    <!-- Rodapé -->
+    <footer>
+        <div>
+            <p>Quem Somos</p>
+            <p>Fale Conosco</p>
+            <p>Redes Sociais</p>
+            <p>Missão</p>
+        </div>
         <p>Todos os direitos reservados</p>
     </footer>
 </body>
+
 </html>
