--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
 
     <!-- Cabeçalho -->
     <header>
-        <a href="./index.html"><img src="./imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
         <nav>
-            <ul>
-                <li><a href="./index.html"> Home</a></li>
-                <li><a href="./html/Artigos_sbre_doação.html">Artigos</a></li>
-                <li><a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
-                <li><a href="./html/Formularios_inscriçoes.html"> Registro</a></li>
-            </ul>
+            <a href="./index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
+            <a href="./index.html"> Home</a> |
+            <a href="./html/Artigos_sbre_doação.html">Artigos</a> |
+            <a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a>|
+            <a href="./html/Formularios_inscriçoes.html"> Registro</a> |
         </nav>
     </header>
 
     <main>
 
         <!-- Banner com imagens -->
-        <section>
-            <img src="./imagens/banner1.png" alt="Imagem sobre a Doação de Sangue" width="60%">
-        </section>
+        <img src="./imagens/banner1.png" alt="Imagem sobre a Doação de Sangue" width="60%">
 
         <!-- Artigos -->
         <section>
             <h1>Artigos sobre Doação de Sangue</h1>
             <div>
-                <a href="./html/artigo_completo.html"><img src="./imagens/Por que doar sangue.jpg" alt="Pessoa doando sangue"  width="20%"></a>
+                <a href="./html/artigo_completo.html"><img src="./imagens/Por que doar sangue.jpg"
+                        alt="Imagem pessoa doando sangue" width="20%"></a>
                 <h2>Por que doar Sangue?</h2>
             </div>
 
@@ -48,14 +45,14 @@
                 <h2>Dicas para o dia da doação</h2>
             </div>
 
-            <button> <a href="./html/artigos.html">Ver todos</a> </button>
+            <button> <a href="./html/Artigos_sbre_doação.html">Ver todos</a> </button>
 
         </section>
 
         <!-- Convite a Registrar -->
         <section>
             <h2>Quer ser um doador de sangue</h2>
-            <button><a href="./html/registro.html">Formulário de Registro</a></button>
+            <button><a href="./html/Formularios_inscriçoes.html">Formulário de Registro</a></button>
         </section>
 
         <!-- Convidar um amigo -->
@@ -71,10 +68,17 @@
             <p>Depoimento 2</p>
             <p>Depoimento 3</p>
         </article>
-        
-    </main>
 
+    </main>
+    <hr>
+    <!-- Rodapé -->
     <footer>
+        <div>
+            <p>Quem Somos</p>
+            <p>Fale Conosco</p>
+            <p>Redes Sociais</p>
+            <p>Missão</p>
+        </div>
         <p>Todos os direitos reservados</p>
     </footer>
 
