--- a/Projetointegrador.html
+++ b/Projetointegrador.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-    <img src="./Titulo.png">
+    <img src="./imagens/LOGO - GOTAS DE VIDA.png">
       <nav>
         <ul>
-        <li><a href="./Home.html">Home</a></li>
-          <li><a href="./Artigos_sbre_doação.html">Artigos sobre doações!</a></li>
-          <li><a href="./Depoimentos.html">Depoimentos de doadores!</a></li>
-          <li><a href="./PERGUNTAS_FREQUENTES.html">Perguntas Frequentes</a></li>
-          <li><a href="./Formularios_inscriçoes.html">Formulario de registros!</a></li>
+        <li><a href="./index.html">Home</a></li>
+          <li><a href="./html/Artigos_sbre_doação.html">Artigos sobre doações!</a></li>
+          <li><a href="./html/Depoimentos.html">Depoimentos de doadores!</a></li>
+          <li><a href="./html/PERGUNTAS_FREQUENTES.html">Perguntas Frequentes</a></li>
+          <li><a href="./html/Formularios_inscriçoes.html">Formulario de registros!</a></li>
         </ul>
       </nav>
     </header>
