--- a/html/Artigos_sbre_doação.html
+++ b/html/Artigos_sbre_doação.html
@@ -35,9 +35,10 @@
                 doar sangue?</a></li>
         <li><a href="../Videos/VID-20230814-WA0032.mp4">Videos:</a></li>
         <li><a href="https://redome.inca.gov.br/campanhas/hemocentros-do-brasil/">Hemocentros do Brasil:</a></li>
-        <li><a href="../imagens/Tabela/Tabela tipo sanguineo.png">Tabela tipo sanguineos</a>
-
-            <img src="../imagens/Home -img.png">
+        <li><a href="../Tabela tipo sanguineo/tabela.png">Tabela tipo sanguineos</a>
+       <nav>
+        <img src="../imagens/Home -img.png">
+       </nav>
     </main>
     <hr>
     <!-- Rodapé -->
