--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Cabeçalho -->
     <header>
         <nav>
-            <a href="./index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
+            <a href="./index.html"><img src="./imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
             <a href="./index.html"> Home</a> |
             <a href="./html/Artigos_sbre_doação.html">Artigos</a> |
             <a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a>|
