--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -5,37 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Doação de Sangue</title>
+    <link rel="stylesheet" href="../styles/cadastro.css">
 </head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <body>
 
     <header>
         <nav>
-            <a href="../index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo" width="15%"></a>
-            <a href="../index.html"> Home</a> |
-            <a href="./Artigos_sbre_doação.html">Artigos</a> |
-            <a href="./PERGUNTAS_FREQUENTES.html">Dúvidas</a>|
-            <a href="./Formularios_inscriçoes.html"> Registro</a> |
+            <a href="../index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
+            <ul>
+                <li><a href="../index.html"> Home</a></li>
+                <li><a href="../html/Artigos_sbre_doação.html">Artigos</a></li>
+                <li><a href="../html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                <li><a href="../html/Formularios_inscriçoes.html"> Registro</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <h1>Formulário de Doação de Sangue</h1>
+        <div class="formulario">
         <form action="processar_doacao.php" method="post">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Nome" required><br><br>
+            <label for="nome">Nome Completo:</label>
+            <input type="text" id="nome" name="nome" placeholder="Nome Completo" required><br><br>
+
+            <label for="telefone">
+                <i class="fas fa-phone"></i> Telefone:
+            </label>
+            <input type="tel" id="telefone" name="telefone" placeholder="Telefone" required><br><br>
+
+            <label for="email">
+                <i class="fas fa-envelope"></i> E-mail:
+            </label>
+            <input type="email" id="email" name="email" placeholder="E-mail"><br><br>
 
             <label for="data de nascimento">Data de Nascimento:</label>
             <input type="date" required><br><br>
 
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone" name="telefone" required><br><br>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
-
-            <label for="tipo_sanguineo">Tipo Sanguíneo:</label>
-            <select id="tipo_sanguineo" name="tipo_sanguineo" required>
+            <label for="Grupo_sanguineo">Grupo Sanguíneo:</label>
+            <select id="Grupo_sanguineo" name="Grupo_sanguineo" required>
                 <option value="A+">A+</option>
                 <option value="A-">A-</option>
                 <option value="B+">B+</option>
@@ -46,18 +54,17 @@
                 <option value="AB-">AB-</option>
             </select><br><br>
 
-            <label for="estado">Estado</label>
-            <select id="estado" name="estado" required>
-                <option value="MG">MG</option>
-                <option value="DF">DF</option>
-                <option value="MT">MT</option>
-                <option value="RS">RS</option>
-            </select><br><br>
-            <label for="cidade">Cidade</label>
-            <select id="cidade" name="Cidade" required>
-            </select><br><br>
+            <label for="endereco">
+                <i class="fas fa-map-marker-alt"></i> Endereço:
+            </label>
+            <input type="text" id="endereco" name="endereco" required><br><br>
             <input type="submit" value="Enviar">
         </form>
+        <div>
+        <img src="../imagens/frame.png" alt="qr code" class="qr-code">
+        <p>Compartilhe nosso site</p>
+    </div>
+</div>
     </main>
     <hr>
     <!-- Rodapé -->
