--- a/html/Formularios_inscriçoes.html
+++ b/html/Formularios_inscriçoes.html
@@ -72,10 +72,10 @@
             <div class="navegacao">
                 <h1>Navegação</h1>
                 <ul class="lista">
-                   <li><a href="#">Home</a></li>
-                   <li><a href="#">Artigo</a></li>
-                   <li><a href="#">Dúvidas</a></li>
-                   <li><a href="#">Registro</a></li> 
+                   <li><a href="/index.html">Home</a></li>
+                   <li><a href="/html/Artigos_sbre_doação.html">Artigo</a></li>
+                   <li><a href="/html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                   <li><a href="/html/Formularios_inscriçoes.html">Registro</a></li> 
                 </ul>
             </div>
     
