--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -16,9 +16,9 @@
             <a href="../index.html"><img src="../imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./html/Artigos_sbre_doação.html">Artigos</a></li>
-                <li><a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
-                <li><a href="./html/Formularios_inscriçoes.html">Registro</a></li>
+                <li><a href="./Artigos_sbre_doação.html">Artigos</a></li>
+                <li><a href="./PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                <li><a href="./Formularios_inscriçoes.html">Registro</a></li>
             </ul>
         </nav>
     </header>
@@ -75,10 +75,10 @@
             <div class="navegacao">
                 <h1>Navegação</h1>
                 <ul>
-                   <li><a href="#">Home</a></li>
-                   <li><a href="#">Artigo</a></li>
-                   <li><a href="#">Dúvidas</a></li>
-                   <li><a href="#">Registro</a></li> 
+                   <li><a href="../index.html">Home</a></li>
+                   <li><a href="./Artigos_sbre_doação.html">Artigos</a></li>
+                   <li><a href="./PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                   <li><a href="./Formularios_inscriçoes.html">Registro</a></li> 
                 </ul>
             </div>
     
