udpate home.css e index.html

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             <div class="navegacao">
                 <h1 class="titulo-rodape">Navegação</h1>
                 <ul class="lista-rodape">
-                   <li><a href="#">Home</a></li>
-                   <li><a href="#">Artigo</a></li>
-                   <li><a href="#">Dúvidas</a></li>
-                   <li><a href="#">Registro</a></li> 
+                   <li><a href="./index.html">Home</a></li>
+                   <li><a href="./html/Artigos_sbre_doação.html">Artigos</a></li>
+                   <li><a href="./html/PERGUNTAS_FREQUENTES.html">Dúvidas</a></li>
+                   <li><a href="./html/Formularios_inscriçoes.html">Registro</a></li> 
                 </ul>
             </div>
     
