--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
             <div class="social">
                 <h1 class="titulo-rodape">Redes Sociais</h1>
                 <ul class="lista-rodape">
-                    <li><a href="#"><img src="../imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
-                    <li><a href="#"><img src="../imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
-                    <li><a href="#"><img src="../imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
+                    <li><a href="#"><img src="./imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
+                    <li><a href="#"><img src="./imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
+                    <li><a href="#"><img src="./imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
                 </ul>
             </div>
     
             <div class="qr-code">
-                <img src="../imagens/frame1.png" alt="qr-code">
+                <img src="./imagens/frame1.png" alt="qr-code">
                 <h3>Compartilhe nosso site</h3>
             </div>
         </div>
