--- a/html/PERGUNTAS_FREQUENTES.html
+++ b/html/PERGUNTAS_FREQUENTES.html
@@ -28,45 +28,81 @@
         <div class="perguntas">
             <!-- pergunta + resposta -->
             <div class="pergunta">
-                <h3>O material para doar sangue é seguro?</h3>
-                <p>Sim. Os materiais utilizados são individuais, estéreis,
+                <dt><button aria-controls="pergunta1" aria-expanded="true">O material para doar sangue é seguro?</button></dt>
+                <dd id="pergunta1">Sim. Os materiais utilizados são individuais, estéreis,
                     descartásveis e o doador não corre risco de contrair doenças na doação de sangue.
-                </p>
+                </dd>
             </div>
 
             <div class="pergunta">
-                <h3>Quem pode doar?</h3>
-                <p>Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos. Jovens de 16 ou 17 anos
+                <dt><button aria-controls="pergunta2"  aria-expanded="false">Quem pode doar?</button></dt>
+                <dd id="pergunta2">Qualquer pessoa com idade entre 18 e 69 anos que pese mais de 50 quilos. Jovens de 16 ou 17 anos
                     também estão aptos, desde que tenham o consentimento dos pais ou dos responsáveis.
-                </p>
+                </dd>
             </div>
 
             <div class="pergunta">
-                <h3>O que é feito com o sangue que doamos?</h3>
-                <p>passa por um processo de separação de hemocomponentes. Uma única bolsa se transforma em quatro: uma de hemácias,
-                    uma de plaquetas, uma de plasma e outra de crioprecipitado</p>
+                <dt><button aria-controls="pergunta3"  aria-expanded="false">O que é feito com o sangue que doamos?</button></dt>
+                <dd id="pergunta3">passa por um processo de separação de hemocomponentes. Uma única bolsa se transforma em quatro: uma de hemácias,
+                    uma de plaquetas, uma de plasma e outra de crioprecipitado</dd>
             </div>
 
             <div class="pergunta">
-                <h3>Quanto tempo leva para o organismo repor o sangue doado?</h3>
-                <p>A reposição do volume de plasma ocorre em 24 horas e a dos glóbulos vermelhos em 4 semanas</p>
+                <dt><button aria-controls="pergunta4"  aria-expanded="false">Quanto tempo leva para o organismo repor o sangue doado?</button></dt>
+                <dd id="pergunta4">A reposição do volume de plasma ocorre em 24 horas e a dos glóbulos vermelhos em 4 semanas</dd>
             </div>
 
             <div class="pergunta">
-                <h3>Quanto tempo demora?</h3>
-                <p>O procedimento todo (cadastro, aferição de sinais vitais, teste de anemia, triagem clínica,
-                    coleta do sangue e lanche) leva cerca de 40 minutos.</p>
+                <dt><button aria-controls="pergunta5"  aria-expanded="false">Quanto tempo demora?</button></dt>
+                <dd id="pergunta5">O procedimento todo (cadastro, aferição de sinais vitais, teste de anemia, triagem clínica,
+                    coleta do sangue e lanche) leva cerca de 40 minutos.</dd>
             </div>
 
             <div class="pergunta">
-                <h3>O preocedimento oferece algum perigo?</h3>
-                <p>Não. A doação é totalmente segura e não apresenta nenhum risco. Os materiais utilizados, como a agulha e os cateteres, são descartáveis.</p>
+                <dt><button aria-controls="pergunta6"  aria-expanded="false">O preocedimento oferece algum perigo?</button></dt>
+                <dd id="pergunta6">Não. A doação é totalmente segura e não apresenta nenhum risco. Os materiais utilizados, como a agulha e os cateteres, são descartáveis.</dd>
             </div>
 
             <div class="pergunta">
-                <h3>Quanto sangue é retirado?</h3>
-                <p> Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</p>
+                <dt><button aria-controls="pergunta7"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta7">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
             </div>
+            
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta8"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta8">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta9"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta9">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta10"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta10">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta11"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta11">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta12"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta12">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta13"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta13">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
+            <div class="pergunta">
+                <dt><button aria-controls="pergunta14"  aria-expanded="false">Quanto sangue é retirado?</button></dt>
+                <dd id="pergunta14">Em média, são coletados 450 mililitros. Esse volume pode salvar a vida de até quatro pessoas.</dd>
+            </div>
+
         </div>
     </main>
     <!-- Rodapé -->
@@ -108,6 +144,7 @@
             <p>Todos os direitos reservados.</p>
         </div>
     </footer>
+    <script src="../js/perguntas.js"></script>
 </body>
 
 </html>
