Criação dos arquivos reset.css cabecalho.css e rodape.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HemoBlog: Gotas de Vida</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/cabecalho.css">
     <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/rodape.css">
     <script src="https://kit.fontawesome.com/4fca10f768.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,7 +18,7 @@
     <!-- Cabeçalho -->
     <header>
         <nav>
-            <a href="./index.html"><img src="./imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
+            <a href="./index.html"><img src="./assets/imagens/LOGO - GOTAS DE VIDA.png" alt="Logo"></a>
             <ul>
                 <li class="item"><a href="./index.html">Home</a></li>
                 <li class="item"><a href="./html/Artigos_sbre_doação.html">Artigos</a></li>
@@ -27,13 +30,13 @@
 
     <main>
 
-        <img class="banner1" src="./imagens/banner1.png" alt="Imagem sobre a Doação de Sangue">
+        <img class="banner1" src="./assets/imagens/banner1.png" alt="Imagem sobre a Doação de Sangue">
         <section id="artigos">
             <h1 id="titulo">Artigos</h1>
             <hr>
             <div class="artigos">
                 <div class="artigo">
-                    <img class="imagem-artigo" src="./imagens/Por que doar sangue.jpg"
+                    <img class="imagem-artigo" src="./assets/imagens/Por que doar sangue.jpg"
                         alt="Imagem pessoa doando sangue">
                     <h2>Por que doar Sangue?</h2>
                     <p>Conheça alguns dos benefícios da doação de sangue que podem ajudá-lo a reconsiderar a doação
@@ -45,7 +48,7 @@
                 </div>
 
                 <div class="artigo">
-                    <img class="imagem-artigo" src="./imagens/Desmistificando mitos.jpg" alt="Desmistificando Mitos">
+                    <img class="imagem-artigo" src="./assets/imagens/Desmistificando mitos.jpg" alt="Desmistificando Mitos">
                     <h2>Desmistificando mitos</h2>
                     <p>Esses são alguns dos mitos que temos que desfazer com mais frequência</p>
                     <div class="data-e-botao">
@@ -55,7 +58,7 @@
                 </div>
 
                 <div class="artigo">
-                    <img class="imagem-artigo" src="./imagens/Dicas para o dia da doação.jpg"
+                    <img class="imagem-artigo" src="./assets/imagens/Dicas para o dia da doação.jpg"
                         alt="Dicas para o dia da doação">
                     <h2>Dicas para o dia da doação</h2>
                     <p>Saiba mais sobre as recomendações antes, durante e depois da doação de sangue</p>
@@ -66,7 +69,7 @@
                 </div>
 
                 <div class="artigo">
-                    <img class="imagem-artigo" src="./imagens/Tres coracoes.jpg" alt="Três corações">
+                    <img class="imagem-artigo" src="./assets/imagens/Tres coracoes.jpg" alt="Três corações">
                     <h2>Você sabe por que seu sangue salva três vidas?</h2>
                     <p>Conheça os três componentes básicos do sangue</p>
                     <div class="data-e-botao">
@@ -82,7 +85,7 @@
         <section id="depoimentos">
             <h3>Depoimentos e agradecimentos</h3>
             <div>
-                <img src="./imagens/avatar1.jpg" alt="Foto de uma mulher">
+                <img src="./assets/imagens/avatar1.jpg" alt="Foto de uma mulher">
                 <i class="fa-solid fa-quote-left icone-esquerdo"></i>
                 <div class="texto-depoimento">
                     <p class="texto">"Minha experiência ao doar sangue foi incrível. Foi rápido, indolor e o pessoal do
@@ -111,7 +114,7 @@
                 <h2>Quer ser um doador de sangue</h2>
                 <a href="./html/Formularios_inscriçoes.html">Formulário de Registro</a>
             </div>
-            <img src="./imagens/imagen-registro.png" alt="">
+            <img src="./assets/imagens/imagen-registro.png" alt="">
         </section>
 
     </main>
@@ -139,14 +142,14 @@
             <div class="social">
                 <h1 class="titulo-rodape">Redes Sociais</h1>
                 <ul class="lista-rodape">
-                    <li><a href="#"><img src="./imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
-                    <li><a href="#"><img src="./imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
-                    <li><a href="#"><img src="./imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
+                    <li><a href="#"><img src="./assets/imagens/social/icone-twitter.svg" alt="icone-twitter"></a></li>
+                    <li><a href="#"><img src="./assets/imagens/social/icone-facebook.svg" alt="icone-facebook"></a></li>
+                    <li><a href="#"><img src="./assets/imagens/social/icone-instagram.svg" alt="icone-instagram"></a></li>
                 </ul>
             </div>
     
             <div class="qr-code">
-                <img src="./imagens/frame1.png" alt="qr-code">
+                <img src="./assets/imagens/frame1.png" alt="qr-code">
                 <h3>Compartilhe nosso site</h3>
             </div>
         </div>
